static/css/style.css
/* General */
@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');

.bg-red {
    background-color: #dc3545;
}

#logo {
    font-family: 'Righteous', cursive;
}

.nav-link {
    font-size: 18px;
    color: #fff !important;
}

.dropdown-item:focus {
    background-color: #dc3545;
}

footer {
    height: 100px;
}

/* Float - Credit to Ian Lunn / https://github.com/IanLunn/Hover */
.hvr-float {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-property: transform;
    transition-property: transform;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
}

.hvr-float:hover,
.hvr-float:focus,
.hvr-float:active {
    -webkit-transform: translateY(-8px);
    transform: translateY(-8px);
}

/* Home */
.epic-cont {
    height: 80vh;
    background: url('/static/images/home.jpg') no-repeat center center fixed;
    background-size: cover;
}

.epic-cont a {
    margin-bottom: 200px;
    opacity: 0.9;
}

